Fix spacing of last sponsor section

--- a/themes/orbitor-hugo/assets/scss/templates/_about.scss
+++ b/themes/orbitor-hugo/assets/scss/templates/_about.scss
@@ -123,7 +123,10 @@
 // Awards
 
 .awards {
-	padding: 0px;
+	padding-top: 0px;
+	&:not(:last-of-type) {
+		padding-bottom: 0px;
+	}
 	.container {
 		//padding: 20px 0px;
 		padding-top: 1.5rem!important;
